feat: create section points

--- a/src/html/components/sprite.html
+++ b/src/html/components/sprite.html
@@ -1,5 +1,6 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="add" viewBox="0 0 14.7 14">
-  <path class="bbst0" d="M6.6 6.3H.7c-.4 0-.7.3-.7.7s.3.7.7.7h5.9v5.5c0 .5.4.8.8.8s.7-.3.7-.7V7.7H14c.4 0 .7-.3.7-.7s-.3-.7-.7-.7H8.1V.7c0-.4-.3-.7-.7-.7-.4 0-.8.3-.8.7v5.6z"/>
-</symbol><symbol id="arrow-right" viewBox="0 0 12 12"><g fill="none">
-<path d="M6.19265 10.5L10.7241 6L6.19265 1.5M10.0948 6H0.905939" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="arrow-right" viewBox="0 0 24 20"><g fill="none">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 10C0 9.44771 0.447715 9 1 9H23C23.5523 9 24 9.44771 24 10C24 10.5523 23.5523 11 23 11H1C0.447715 11 0 10.5523 0 10Z" fill="#3B88FB"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M13.2929 0.292893C13.6834 -0.0976311 14.3166 -0.0976311 14.7071 0.292893L23.7071 9.29289C24.0976 9.68342 24.0976 10.3166 23.7071 10.7071L14.7071 19.7071C14.3166 20.0976 13.6834 20.0976 13.2929 19.7071C12.9024 19.3166 12.9024 18.6834 13.2929 18.2929L21.5858 10L13.2929 1.70711C12.9024 1.31658 12.9024 0.683417 13.2929 0.292893Z" fill="#3B88FB"/>
+</g></symbol><symbol id="arrow-small" viewBox="0 0 10 18"><g fill="none">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0.46967 0.96967C0.762563 0.676777 1.23744 0.676777 1.53033 0.96967L9.03033 8.46967C9.32322 8.76256 9.32322 9.23744 9.03033 9.53033L1.53033 17.0303C1.23744 17.3232 0.762563 17.3232 0.46967 17.0303C0.176777 16.7374 0.176777 16.2626 0.46967 15.9697L7.43934 9L0.46967 2.03033C0.176777 1.73744 0.176777 1.26256 0.46967 0.96967Z" fill="#3B88FB"/>
 </g></symbol></svg>
