--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -20,18 +20,25 @@ nav {
 		display: flex;
 		align-items: center;
 		gap: calc(var(--offset) * 0.6);
-		font-weight: 500;
-		font-size: 20px;
-		line-height: 120%;
-		text-transform: capitalize;
-		text-align: center;
-		color: var(--color-bg-primary);
+
+		& span {
+			font-weight: 500;
+			font-size: calc(var(--fz) * 1.1);
+			line-height: 120%;
+			text-transform: capitalize;
+			text-align: left;
+			color: var(--color-bg-primary);
+			max-width: 150px;
+			width: 10ch;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
 	}
 
 	&__links {
 		display: flex;
-		flex-direction: column;
-		align-items: flex-end;
+		align-items: center;
 		gap: calc(var(--offset) * 0.6);
 	}
 
@@ -39,15 +46,22 @@ nav {
 		display: flex;
 		align-items: center;
 		gap: calc(var(--offset) * 0.6);
-		padding: calc(var(--offset) * 0.6) var(--offset);
+		padding: calc(var(--offset) * 0.8);
 		border-radius: 2em;
 		background-color: #f1f4f8;
+
+		& svg {
+			width: 1.2em;
+			height: 1.2em;
+		}
 	}
 
 	&__bot {
-		padding: calc(var(--offset) * 0.6) var(--offset);
+		padding: calc(var(--offset) * 0.6) var(--offset) calc(var(--offset) * 0.8);
 		border-radius: 2em;
 		background-color: #f1f4f8;
+		font-weight: 500;
+		font-size: calc(var(--fz) * 1.1);
 	}
 }
 
