--- a/src/html/components/head.html
+++ b/src/html/components/head.html
@@ -26,5 +26,5 @@
 
 	@@include('./fonts.html')
 
-	<link rel="stylesheet" href="/css/main.min.css" />
+	<link rel="stylesheet" href="./css/main.min.css" />
 </head>
