--- a/css/main.css
+++ b/css/main.css
@@ -369,25 +369,35 @@ nav {
           align-items: center;
   gap: calc(max(calc(1.25 * 1vw), 15px) * 0.6);
   gap: calc(var(--offset) * 0.6);
+}
+.nav__logo a img {
+  width: calc(max(calc(1.25 * 1vw), 15px) * 2);
+  width: calc(var(--offset) * 2);
+  height: calc(max(calc(1.25 * 1vw), 15px) * 2);
+  height: calc(var(--offset) * 2);
+}
+.nav__logo a span {
   font-weight: 500;
-  font-size: 20px;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.1);
+  font-size: calc(var(--fz) * 1.1);
   line-height: 120%;
   text-transform: capitalize;
-  text-align: center;
+  text-align: left;
   color: #3b88fb;
   color: var(--color-bg-primary);
+  max-width: 150px;
+  width: 10ch;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .nav__links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: calc(max(calc(1.25 * 1vw), 15px) * 0.6);
   gap: calc(var(--offset) * 0.6);
 }
@@ -400,16 +410,23 @@ nav {
           align-items: center;
   gap: calc(max(calc(1.25 * 1vw), 15px) * 0.6);
   gap: calc(var(--offset) * 0.6);
-  padding: calc(max(calc(1.25 * 1vw), 15px) * 0.6) max(calc(1.25 * 1vw), 15px);
-  padding: calc(var(--offset) * 0.6) var(--offset);
+  padding: calc(max(calc(1.25 * 1vw), 15px) * 0.8);
+  padding: calc(var(--offset) * 0.8);
   border-radius: 2em;
   background-color: #f1f4f8;
 }
+.nav__phone svg {
+  width: 1.2em;
+  height: 1.2em;
+}
 .nav__bot {
-  padding: calc(max(calc(1.25 * 1vw), 15px) * 0.6) max(calc(1.25 * 1vw), 15px);
-  padding: calc(var(--offset) * 0.6) var(--offset);
+  padding: calc(max(calc(1.25 * 1vw), 15px) * 0.6) max(calc(1.25 * 1vw), 15px) calc(max(calc(1.25 * 1vw), 15px) * 0.8);
+  padding: calc(var(--offset) * 0.6) var(--offset) calc(var(--offset) * 0.8);
   border-radius: 2em;
   background-color: #f1f4f8;
+  font-weight: 500;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.1);
+  font-size: calc(var(--fz) * 1.1);
 }
 
 .nav__phone:active {
@@ -421,6 +438,8 @@ nav {
 }
 
 .page-links {
+  max-width: 780px;
+  margin: 0 auto;
   padding-right: max(calc(1.25 * 1vw), 15px);
   padding-right: var(--offset);
   display: -webkit-box;
@@ -429,12 +448,6 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  overflow-x: auto;
-  -ms-scroll-snap-type: x mandatory;
-      scroll-snap-type: x mandatory;
-  scrollbar-width: none;
   scroll-padding-left: max(calc(1.25 * 1vw), 15px);
   scroll-padding-left: var(--offset);
   margin-bottom: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
@@ -451,8 +464,7 @@ nav {
   min-width: -webkit-fit-content;
   min-width: -moz-fit-content;
   min-width: fit-content;
-  min-width: fit-content;
-  scroll-snap-align: start;
+  width: 100%;
   font-weight: 500;
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.2);
   font-size: calc(var(--fz) * 1.2);
@@ -466,10 +478,6 @@ nav {
   border-radius: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
   border-radius: calc(var(--offset) * 1.5);
   background-color: #f1f4f8;
-  margin-left: calc(max(calc(1.25 * 1vw), 15px) * 0.5);
-  margin-left: calc(var(--offset) * 0.5);
-}
-.page-links a:first-of-type {
   margin-left: max(calc(1.25 * 1vw), 15px);
   margin-left: var(--offset);
 }
@@ -495,9 +503,252 @@ nav {
   color: var(--color-default-white);
 }
 
+.links-container {
+  padding-right: max(calc(1.25 * 1vw), 15px);
+  padding-right: var(--offset);
+}
+
+.points {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: (auto)[2];
+  grid-template-rows: repeat(2, auto);
+  grid-gap: max(calc(1.25 * 1vw), 15px);
+  grid-gap: var(--offset);
+  gap: max(calc(1.25 * 1vw), 15px);
+  gap: var(--offset);
+  margin-bottom: max(calc(1.25 * 1vw), 15px);
+  margin-bottom: var(--offset);
+}
+
+.points-col1 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+.points-col2 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+.choise {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  background-color: #3b88fb;
+  background-color: var(--color-bg-primary);
+  border-radius: 1em;
+  padding: max(calc(1.25 * 1vw), 15px);
+  padding: var(--offset);
+}
+.choise h1 {
+  font-weight: 600;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.3);
+  font-size: calc(var(--fz) * 1.3);
+  line-height: 120%;
+  color: #fff;
+  color: var(--color-default-white);
+}
+.choise span {
+  background-color: #fff;
+  background-color: var(--color-default-white);
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: calc(max(calc(1.25 * 1vw), 15px) * 4);
+  width: calc(var(--offset) * 4);
+  height: calc(max(calc(1.25 * 1vw), 15px) * 4);
+  height: calc(var(--offset) * 4);
+}
+.choise span svg {
+  width: calc(max(calc(1.25 * 1vw), 15px) * 1.6);
+  width: calc(var(--offset) * 1.6);
+  height: calc(max(calc(1.25 * 1vw), 15px) * 1.2);
+  height: calc(var(--offset) * 1.2);
+}
+
+.points-count {
+  border-radius: 1em;
+  background-color: #f1f4f8;
+  padding: max(calc(1.25 * 1vw), 15px);
+  padding: var(--offset);
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  min-height: calc(max(calc(1.25 * 1vw), 15px) * 8);
+  min-height: calc(var(--offset) * 8);
+}
+.points-count svg {
+  margin-left: auto;
+  width: calc(max(calc(1.25 * 1vw), 15px) * 0.6);
+  width: calc(var(--offset) * 0.6);
+  height: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  height: calc(var(--offset) * 1.5);
+}
+.points-count span {
+  margin-top: auto;
+  font-weight: 600;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.1);
+  font-size: calc(var(--fz) * 1.1);
+  line-height: 120%;
+  text-transform: capitalize;
+  color: var(-color-text-primary);
+}
+.points-count b {
+  font-weight: 600;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.1);
+  font-size: calc(var(--fz) * 1.1);
+  line-height: 1.1;
+  color: var(-color-text-primary);
+  margin-bottom: max(calc(1.25 * 1vw), 15px);
+  margin-bottom: var(--offset);
+}
+.points-count p {
+  font-weight: 400;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.1);
+  font-size: calc(var(--fz) * 1.1);
+  line-height: 120%;
+  color: #5d5d5d;
+  -ms-grid-column-span: 2;
+  grid-column: span 2;
+}
+
+.points-count:active {
+  background-color: #dce4ed;
+}
+
+.choise:active {
+  background-color: #3066b7;
+}
+
+.calculation {
+  border-radius: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: calc(max(calc(1.25 * 1vw), 15px) * 1.2) max(calc(1.25 * 1vw), 15px);
+  padding: calc(var(--offset) * 1.2) var(--offset);
+  background-color: #f1f4f8;
+  margin-bottom: max(calc(1.25 * 1vw), 15px);
+  margin-bottom: var(--offset);
+}
+.calculation p {
+  font-weight: 600;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.1);
+  font-size: calc(var(--fz) * 1.1);
+  line-height: 1;
+  margin: 0;
+  text-transform: capitalize;
+  color: #1f2f43;
+  color: var(--color-text-primary);
+}
+.calculation svg {
+  width: calc(max(calc(1.25 * 1vw), 15px) * 0.6);
+  width: calc(var(--offset) * 0.6);
+  height: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  height: calc(var(--offset) * 1.5);
+}
+
+.calculation:active {
+  background-color: #dce4ed;
+}
+
+.slider {
+  position: relative;
+  margin-bottom: max(calc(1.25 * 1vw), 15px);
+  margin-bottom: var(--offset);
+}
+
+.pagination {
+  margin-top: max(calc(1.25 * 1vw), 15px);
+  margin-top: var(--offset);
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.5em;
+}
+.pagination span {
+  border-radius: 50%;
+  width: 0.8em;
+  height: 0.8em;
+  background-color: #cccccc;
+}
+
+.pagination .swiper-pagination-bullet-active {
+  background-color: #fff;
+}
+
+.slider__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.slider__img {
+  min-width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  overflow: hidden;
+  border-radius: 1em;
+}
+.slider__img img {
+  width: 100%;
+  height: auto;
+}
+
 body {
   background-color: #ffffff;
-  color: #1f2f43;
+  color: #3b88fb;
+  color: var(--color-bg-primary);
   font-family: "Poppins", sans-serif;
   font-family: var(--ffP), sans-serif;
   overflow-x: hidden;
@@ -574,6 +825,7 @@ body {
   max-width: 780px;
   margin: 0 auto;
   width: 100%;
+  overflow: hidden;
 }
 
 h1,
