--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "./components/page-links.scss";
 @import "./components/points.scss";
 @import "./components/slider.scss";
+@import "./components/tabs.scss";
 
 body {
 	background-color: #ffffff;
