feat: add history order

--- a/src/html/components/tabs.html
+++ b/src/html/components/tabs.html
@@ -6,10 +6,103 @@
 	</div>
 
 	<div class="tabs__about active" data-tab-content="order">
-		order
+		<div class="tabs__about-head">
+			<h3>Закааз</h3>
+			<p>Трекер доставки </p>
+		</div>
+		<div class="tabs__about-info">
+			<div class="point-decor"></div>
+			<b>Принят на Склад</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info">
+			<div class="point-decor"></div>
+			<b>Упакован и Оформлен</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>Отправлен</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>В Пути</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>На Таможне</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>Статус Оплачен</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>Готов к выдаче!</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>На Доставке</b>
+			<span>12 Марта</span>
+		</div>
+		<div class="tabs__about-info in-active">
+			<div class="point-decor"></div>
+			<b>Доставлен</b>
+			<span>12 Марта</span>
+		</div>
 	</div>
 
 	<div class="tabs__about" data-tab-content="history">
-		history
+		<h3>Ваши заказы</h3>
+
+		<div class="tabs__about-history">
+			<div class="tabs__about-history-head">
+				<p>номер заказа</p>
+				<span>Статус</span>
+			</div>
+			<div class="tabs__about-history-bottom">
+				<b>#999993</b>
+				<span>Доставлен</span>
+			</div>
+		</div>
+
+		<div class="tabs__about-history">
+			<div class="tabs__about-history-head">
+				<p>номер заказа</p>
+				<span>Статус</span>
+			</div>
+			<div class="tabs__about-history-bottom">
+				<b>#999993</b>
+				<span class="cansel">Доставлен</span>
+			</div>
+		</div>
+
+		<div class="tabs__about-history">
+			<div class="tabs__about-history-head">
+				<p>номер заказа</p>
+				<span>Статус</span>
+			</div>
+			<div class="tabs__about-history-bottom">
+				<b>#999993</b>
+				<span>Доставлен</span>
+			</div>
+		</div>
+
+		<div class="tabs__about-history">
+			<div class="tabs__about-history-head">
+				<p>номер заказа</p>
+				<span>Статус</span>
+			</div>
+			<div class="tabs__about-history-bottom">
+				<b>#999993</b>
+				<span>Доставлен</span>
+			</div>
+		</div>
+
 	</div>
 </section>
