--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -111,7 +111,6 @@ a {
 	color: inherit;
 	outline: none;
 	text-wrap: balance;
-	user-select: text;
 	user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
@@ -136,7 +135,13 @@ button {
 	font-size: var(--fz);
 	padding: 0;
 	font-family: "Inter", sans-serif;
-	user-select: text;
+	user-select: none;
+	user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	-webkit-tap-highlight-color: transparent;
+	touch-action: manipulation;
+	outline: none;
 
 	svg,
 	span {
