feat: add page about

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import "./components/points.scss";
 @import "./components/slider.scss";
 @import "./components/tabs.scss";
+@import "./components/about.scss";
 
 body {
 	background-color: #ffffff;
