--- a/src/html/components/tabs.html
+++ b/src/html/components/tabs.html
@@ -7,7 +7,7 @@
 
 	<div class="tabs__about active" data-tab-content="order">
 		<div class="tabs__about-head">
-			<h3>Закааз</h3>
+			<h3>Заказ</h3>
 			<p>Трекер доставки </p>
 		</div>
 		<div class="tabs__about-info">
