--- a/css/main.css
+++ b/css/main.css
@@ -1004,6 +1004,106 @@ nav {
           box-shadow: 0 0 0 0.1em #f03637;
 }
 
+.about {
+  padding: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  padding: calc(var(--offset) * 1.5);
+  border-radius: 1em;
+  background-color: #f1f4f8;
+  margin-bottom: max(calc(1.25 * 1vw), 15px);
+  margin-bottom: var(--offset);
+}
+.about-image {
+  width: 100%;
+  border-radius: 2em;
+  overflow: hidden;
+  margin-bottom: 1em;
+}
+.about-image img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.about h1 {
+  font-weight: 600;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.6);
+  font-size: calc(var(--fz) * 1.6);
+  line-height: 1;
+  color: #1f2f43;
+  color: var(--color-text-primary);
+  margin-bottom: max(calc(1.25 * 1vw), 15px);
+  margin-bottom: var(--offset);
+}
+.about p {
+  font-weight: 500;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.2);
+  font-size: calc(var(--fz) * 1.2);
+  line-height: 1.5;
+  color: #1f2f43;
+  color: var(--color-text-primary);
+  margin: 0;
+}
+.about p span {
+  font-weight: 600;
+}
+.about__desc {
+  margin-top: 1em;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 8% 92%;
+  grid-template-columns: 8% 92%;
+  grid-gap: 0.6em;
+  gap: 0.6em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.about__desc svg {
+  width: calc(max(calc(1.25 * 1vw), 15px) * 1.3);
+  width: calc(var(--offset) * 1.3);
+  height: calc(max(calc(1.25 * 1vw), 15px) * 1.3);
+  height: calc(var(--offset) * 1.3);
+}
+.about__desc:first-of-type {
+  margin-top: 2em;
+}
+
+.partners {
+  padding: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  padding: calc(var(--offset) * 1.5);
+  border-radius: 1em;
+  background-color: #f1f4f8;
+  margin-bottom: calc(max(calc(1.25 * 1vw), 15px) * 4);
+  margin-bottom: var(--offset-grid);
+}
+.partners h3 {
+  font-weight: 600;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.5);
+  font-size: calc(var(--fz) * 1.5);
+  line-height: 120%;
+  color: #1f2f43;
+  color: var(--color-text-primary);
+  margin-bottom: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  margin-bottom: calc(var(--offset) * 1.5);
+}
+.partners-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: calc(max(calc(1.25 * 1vw), 15px) * 4);
+  grid-gap: var(--offset-grid);
+  gap: calc(max(calc(1.25 * 1vw), 15px) * 4);
+  gap: var(--offset-grid);
+}
+.partners-wrapper img {
+  width: 100%;
+  min-height: calc(max(calc(1.25 * 1vw), 15px) * 4);
+  min-height: var(--offset-grid);
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 body {
   background-color: #ffffff;
   color: #3b88fb;
