--- a/src/html/components/calculation.html
+++ b/src/html/components/calculation.html
@@ -1,4 +1,4 @@
-<a href="#" class="calculation">
+<a href="/tarifs.html#calculation" class="calculation">
 	<p>рассчитать стоимость товара</p>
 	<svg width="9" height="17">
 		<use xlink:href="#arrow-small"></use>
