--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import "./components/slider.scss";
 @import "./components/tabs.scss";
 @import "./components/about.scss";
+@import "./components/tarifs.scss";
 
 body {
 	background-color: #ffffff;
@@ -56,7 +57,7 @@ body {
 }
 
 ::selection {
-	background-color: var(--violet);
+	background-color: #afb9c6;
 	color: var(--white);
 }
 
@@ -137,7 +138,6 @@ button {
 	padding: 0;
 	font-family: "Inter", sans-serif;
 	user-select: none;
-	user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	-webkit-tap-highlight-color: transparent;
@@ -151,7 +151,7 @@ button {
 }
 
 input {
-	font-family: var(--ffG), sans-serif;
+	font-family: var(--ffP), sans-serif;
 }
 
 ul {
