--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -2,10 +2,10 @@
 
 	<nav>
 		<div class="nav__logo">
-			<a href="#">
+			<a href="./profile.html">
 				<picture>
-					<source srcset="/images/index/avtr.avif" />
-					<img src="/images/index/avtr.png" alt="avatar" width="43" height="43" />
+					<source srcset="./images/index/avtr.avif" />
+					<img src="./images/index/avtr.png" alt="avatar" width="43" height="43" />
 				</picture>
 				<span>userName</span>
 			</a>
