--- a/src/html/components/points.html
+++ b/src/html/components/points.html
@@ -1,6 +1,6 @@
 <section class="points">
-	
-	<a href="#" class="points-count points-col1">
+
+	<a href="./profile.html" class="points-count points-col1">
 		<b>баллы</b>
 		<svg width="9" height="17">
 			<use xlink:href="#arrow-small"></use>
