--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "./components/tabs.scss";
 @import "./components/about.scss";
 @import "./components/tarifs.scss";
+@import "./components/profile.scss";
 
 body {
 	background-color: #ffffff;
