--- a/src/scss/components/tabs.scss
+++ b/src/scss/components/tabs.scss
@@ -49,18 +49,71 @@
 	padding: calc(var(--offset) * 1.5);
 	background-color: #f1f4f8;
 
-	&-head {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		margin-bottom: var(--offset);
+	&-wrapper {
+		overflow: hidden;
+		display: none;
+		margin-top: calc(var(--offset) * 1.5);
+		padding-top: calc(var(--offset) * 1.5);
+		border-top: 0.1em solid #dbdbdb;
+		transition-duration: 0.5s;
+		transition-property: height;
+	}
 
-		& h3 {
-			font-weight: 600;
-			font-size: calc(var(--fz) * 1.5);
-			line-height: 1;
+	& h3 {
+		font-weight: 600;
+		font-size: calc(var(--fz) * 1.5);
+		line-height: 1;
+		color: var(--color-text-primary);
+	}
+
+	&-id {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		&:first-of-type {
+			margin-top: 0.5em;
+			margin-bottom: calc(var(--offset) * 1.4);
+		}
+
+		& b {
+			font-weight: 500;
+			font-size: var(--fz);
+			line-height: 110%;
+			color: var(--color-bg-primary);
+		}
+
+		& svg {
+			width: calc(var(--offset) * 1.5);
+			height: calc(var(--offset) * 1.5);
+			fill: var(--color-text-primary);
+			transition-property: transform;
+			transition-duration: 0.5s;
+		}
+
+		& #productId {
+			font-weight: 400;
+			font-size: calc(var(--fz) * 1.3);
+			line-height: 110%;
+			text-transform: capitalize;
 			color: var(--color-text-primary);
 		}
+
+		& span {
+			font-weight: 400;
+			font-size: calc(var(--fz) * 1.3);
+			line-height: 110%;
+			color: var(--color-text-primary);
+		}
+	}
+
+	&-head {
+		display: flex;
+		flex-direction: column;
+		margin-bottom: var(--offset);
+		background-color: var(--color-default-white);
+		padding: var(--offset);
+		border-radius: 1em;
 
 		& p {
 			font-weight: 600;
@@ -207,4 +260,13 @@
 .tabs__about-history .cansel {
 	color: #f03637;
 	box-shadow: 0 0 0 0.1em #f03637;
+}
+
+.tabs__about-head.active .tabs__about-wrapper {
+	display: block;
+}
+
+.tabs__about-head.active .tabs__about-id svg {
+	transform: rotate(180deg);
+	fill: var(--color-bg-primary);
 }
