--- a/css/main.css
+++ b/css/main.css
@@ -811,26 +811,97 @@ nav {
   padding: calc(var(--offset) * 1.5);
   background-color: #f1f4f8;
 }
-.tabs__about-head {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: max(calc(1.25 * 1vw), 15px);
-  margin-bottom: var(--offset);
+.tabs__about-wrapper {
+  overflow: hidden;
+  display: none;
+  margin-top: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  margin-top: calc(var(--offset) * 1.5);
+  padding-top: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  padding-top: calc(var(--offset) * 1.5);
+  border-top: 0.1em solid #dbdbdb;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+  -webkit-transition-property: height;
+  transition-property: height;
 }
-.tabs__about-head h3 {
+.tabs__about h3 {
   font-weight: 600;
   font-size: calc(max(calc(1 * 1vw), 15px) * 1.5);
   font-size: calc(var(--fz) * 1.5);
   line-height: 1;
   color: #1f2f43;
   color: var(--color-text-primary);
+}
+.tabs__about-id {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.tabs__about-id:first-of-type {
+  margin-top: 0.5em;
+  margin-bottom: calc(max(calc(1.25 * 1vw), 15px) * 1.4);
+  margin-bottom: calc(var(--offset) * 1.4);
+}
+.tabs__about-id b {
+  font-weight: 500;
+  font-size: max(calc(1 * 1vw), 15px);
+  font-size: var(--fz);
+  line-height: 110%;
+  color: #3b88fb;
+  color: var(--color-bg-primary);
+}
+.tabs__about-id svg {
+  width: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  width: calc(var(--offset) * 1.5);
+  height: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
+  height: calc(var(--offset) * 1.5);
+  fill: #1f2f43;
+  fill: var(--color-text-primary);
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+.tabs__about-id #productId {
+  font-weight: 400;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.3);
+  font-size: calc(var(--fz) * 1.3);
+  line-height: 110%;
+  text-transform: capitalize;
+  color: #1f2f43;
+  color: var(--color-text-primary);
+}
+.tabs__about-id span {
+  font-weight: 400;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.3);
+  font-size: calc(var(--fz) * 1.3);
+  line-height: 110%;
+  color: #1f2f43;
+  color: var(--color-text-primary);
+}
+.tabs__about-head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: max(calc(1.25 * 1vw), 15px);
+  margin-bottom: var(--offset);
+  background-color: #fff;
+  background-color: var(--color-default-white);
+  padding: max(calc(1.25 * 1vw), 15px);
+  padding: var(--offset);
+  border-radius: 1em;
 }
 .tabs__about-head p {
   font-weight: 600;
@@ -1003,6 +1074,18 @@ nav {
   color: #f03637;
   -webkit-box-shadow: 0 0 0 0.1em #f03637;
           box-shadow: 0 0 0 0.1em #f03637;
+}
+
+.tabs__about-head.active .tabs__about-wrapper {
+  display: block;
+}
+
+.tabs__about-head.active .tabs__about-id svg {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+  fill: #3b88fb;
+  fill: var(--color-bg-primary);
 }
 
 .about {
