--- a/css/main.css
+++ b/css/main.css
@@ -819,10 +819,6 @@ nav {
   padding-top: calc(max(calc(1.25 * 1vw), 15px) * 1.5);
   padding-top: calc(var(--offset) * 1.5);
   border-top: 0.1em solid #dbdbdb;
-  -webkit-transition-duration: 0.5s;
-          transition-duration: 0.5s;
-  -webkit-transition-property: height;
-  transition-property: height;
 }
 .tabs__about h3 {
   font-weight: 600;
@@ -1717,6 +1713,200 @@ form button[type=reset]:active {
   line-height: 110%;
   text-align: right;
   color: #5d5d5d;
+}
+
+.servises {
+  padding: max(calc(1.25 * 1vw), 15px);
+  padding: var(--offset);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: max(calc(1.25 * 1vw), 15px);
+  margin-bottom: var(--offset);
+  background-color: #f1f4f8;
+  border-radius: 1em;
+}
+.servises h3 {
+  font-weight: 600;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.5);
+  font-size: calc(var(--fz) * 1.5);
+  line-height: 120%;
+  text-transform: capitalize;
+  color: #1f2f43;
+  color: var(--color-text-primary);
+  margin-top: 0.3em;
+}
+.servises-accordeon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 0.5em;
+}
+.servises-accordeon svg {
+  width: calc(max(calc(1.25 * 1vw), 15px) * 1.6);
+  width: calc(var(--offset) * 1.6);
+  height: calc(max(calc(1.25 * 1vw), 15px) * 1.6);
+  height: calc(var(--offset) * 1.6);
+  fill: #1f2f43;
+  fill: var(--color-text-primary);
+  -webkit-transition-property: fill, -webkit-transform;
+  transition-property: fill, -webkit-transform;
+  transition-property: transform, fill;
+  transition-property: transform, fill, -webkit-transform;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+.servises-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: max(calc(1.25 * 1vw), 15px);
+  gap: var(--offset);
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: height 0.3s ease;
+  transition: height 0.3s ease;
+}
+.servises-wrapper b {
+  font-weight: 400;
+  font-size: max(calc(1 * 1vw), 15px);
+  font-size: var(--fz);
+  line-height: 150%;
+  color: #1f2f43;
+  color: var(--color-text-primary);
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+.servises-wrapper-line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 0.5em;
+}
+.servises-wrapper-line p {
+  margin: 0;
+  font-weight: 500;
+  font-size: max(calc(1 * 1vw), 15px);
+  font-size: var(--fz);
+  line-height: 110%;
+  color: #5d5d5d;
+}
+.servises-wrapper-line span {
+  font-weight: 600;
+  font-size: max(calc(1 * 1vw), 15px);
+  font-size: var(--fz);
+  line-height: 110%;
+  color: #1f2f43;
+  color: var(--color-text-primary);
+}
+.servises-card {
+  padding: max(calc(1.25 * 1vw), 15px);
+  padding: var(--offset);
+  background-color: #fff;
+  background-color: var(--color-default-white);
+  border-radius: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: max(calc(1.25 * 1vw), 15px);
+  gap: var(--offset);
+  border: 0.1em solid #a7a8aa;
+}
+.servises-card:first-of-type {
+  margin-top: 1em;
+}
+.servises-card span {
+  font-weight: 500;
+  font-size: calc(max(calc(1 * 1vw), 15px) * 1.3);
+  font-size: calc(var(--fz) * 1.3);
+  line-height: 110%;
+  color: #1f2f43;
+  color: var(--color-text-primary);
+}
+.servises-card p {
+  font-weight: 500;
+  font-size: max(calc(1 * 1vw), 15px);
+  font-size: var(--fz);
+  line-height: 150%;
+  color: #5d5d5d;
+  margin: 0;
+}
+
+.servises-wrapper.active {
+  height: auto;
+}
+
+.servises-accordeon.active svg {
+  fill: #3b88fb;
+  fill: var(--color-bg-primary);
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.servises-card-info {
+  padding: max(calc(1.25 * 1vw), 15px);
+  padding: var(--offset);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: max(calc(1.25 * 1vw), 15px);
+  gap: var(--offset);
+  background-color: #fff;
+  background-color: var(--color-default-white);
+  border-radius: 1em;
+}
+.servises-card-info:first-of-type {
+  margin-top: 1em;
+}
+.servises-card-info p {
+  font-weight: 500;
+  font-size: max(calc(1 * 1vw), 15px);
+  font-size: var(--fz);
+  line-height: 110%;
+  color: #5d5d5d;
+  margin: 0;
+}
+.servises-card-info b {
+  font-weight: 600;
+  font-size: max(calc(1 * 1vw), 15px);
+  font-size: var(--fz);
+  line-height: 150%;
+  color: #1f2f43;
+  margin: 0;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
