--- a/src/scss/components/tarifs.scss
+++ b/src/scss/components/tarifs.scss
@@ -189,3 +189,96 @@ form {
 .select select option:hover {
 	background-color: #8c98a7;
 }
+
+.tarifs-inner {
+	display: flex;
+	flex-direction: column;
+	gap: var(--offset);
+	margin-bottom: var(--offset-grid);
+
+	&-item {
+		padding-top: calc(var(--offset) * 1.5);
+		border-radius: 1em;
+		background-color: #f1f4f8;
+		border: 0.2em solid #f1f4f8;
+		margin-bottom: var(--offset);
+
+		& h3 {
+			font-weight: 600;
+			font-size: calc(var(--offset) * 1.5);
+			line-height: 120%;
+			text-align: center;
+			color: var(--color-text-primary);
+			margin-top: 0;
+			margin-bottom: calc(var(--offset) * 1.5);
+		}
+	}
+
+	&-card {
+		background-color: var(--color-default-white);
+		padding: calc(var(--offset) * 1.5);
+		display: flex;
+		flex-direction: column;
+		border-bottom-left-radius: 1em;
+		border-bottom-right-radius: 1em;
+
+		& p {
+			font-weight: 400;
+			font-size: var(--fz);
+			line-height: 180%;
+			text-align: center;
+			color: #5d5d5d;
+			margin: 0;
+		}
+
+		b {
+			font-weight: 600;
+			font-size: var(--fz);
+			line-height: 150%;
+			text-align: center;
+			color: var(--color-bg-primary);
+			margin-top: 1em;
+			margin-bottom: 1em;
+		}
+
+		& a {
+			font-weight: 500;
+			font-size: var(--fz);
+			line-height: 120%;
+			text-transform: capitalize;
+			display: block;
+			text-align: center;
+			width: 100%;
+			padding: var(--offset);
+			border-radius: 1em;
+			border: 1px solid var(--color-bg-primary);
+
+			&:active {
+				background-color: var(--color-bg-primary);
+				color: var(--color-default-white);
+			}
+		}
+	}
+
+	&-head {
+		display: flex;
+		justify-content: center;
+		gap: 0.5em;
+		margin-bottom: 1em;
+
+		& b {
+			font-weight: 600;
+			font-size: calc(var(--fz) * 1.5);
+			line-height: 120%;
+			color: var(--color-text-primary);
+			margin: 0;
+		}
+
+		& span {
+			font-weight: 600;
+			font-size: calc(var(--fz) * 1.5);
+			line-height: 120%;
+			color: #a7a8aa;
+		}
+	}
+}
